fixed some grid v spacing issues, added wizard index better stub with buttons and descriptions and shit

--- a/app/webroot/css/thermal-age.css
+++ b/app/webroot/css/thermal-age.css
@@ -59,7 +59,7 @@ li {
 .grid_10,
 .grid_11,
 .grid_12 {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 /* The background comes in 2 layers;  */
